# yew-fullstack-boilerplate

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md
backend/: Cargo.toml  Dockerfile  LICENSE_MIT  README.md
backend/scripts/: run-dev.sh  run-static.sh
backend/src/: error.rs  main.rs  secret.key
backend/src/api/: account_controller.rs  mod.rs
backend/src/config/: app.rs  db.rs  mod.rs  server.rs
backend/src/models/: mod.rs  response.rs  user.rs  user_token.rs
backend/src/services/: account_service.rs  forward_frontend.rs  mod.rs  serve_frontend.rs
backend/src/utils/: token.rs
frontend/: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  webpack.config.js
frontend/src/: app.rs  lib.rs  router.rs
frontend/src/agents/: auth.rs
frontend/src/components/: layout.rs  mod.rs
frontend/src/components/auth/: controls.rs  controls.scss  login.rs  login.scss  mod.rs  signup.rs  signup.scss
frontend/src/components/layout/: footer.rs  header.rs  header.scss
frontend/src/components/not_found/: mod.rs  style.scss
frontend/src/entity/: userdata.rs  username.rs
frontend/src/model/: auth.rs  mod.rs
frontend/src/routes/: home.rs  mod.rs  profile.rs
frontend/static/: index.html  theme.css
scripts/: build-and-run.sh  build.sh  docker-compose.dev.yml  docker-compose.yml  run-dev-force-recreate.sh  run-dev.sh  run.sh  stop-dev.sh  stop.sh
