[package]
name = "yew-fullstack-boilerplate-frontend"
version = "0.0.1"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4.8"
serde = {version = "1.0.111", features = ["derive"]}
serde_json = "1.0.53"
wasm-bindgen = "0.2.63"
web_logger = "0.2"
yew = { version = "^0.16.2", features = ["web_sys"] }
yew-router = { version="0.13.0", features = ["web_sys"] }
css-in-rust = { version = "^0.4.1", features = ["yew_integration"] }
anyhow = "1.0.31"
uuid = {version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "^0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
